# CGPROJECT2023-24

./: CMakeLists.txt  README.md
TestingDir/: mainHenry.cpp  mainNicco.cpp
cmake_modules/: findSDL2.cmake
src/: Piece.hpp  appTutorial.cpp  appTutorial.h  main.cpp  utils.h
src/Engine/: ControlWrapper.cpp  Project.cpp  Project.h  Project.hpp  ShadowMapInfo.hpp  SoundEngine.hpp  Starter.hpp
src/Model/Include/: Boss.h  Bullet.h  Constants.h  Enemy.h  Partita.h  Plane.h  PlaneBuilder.hpp  PlaneType.h  Player.h  Position3D.h  Projectile.h  QuadTree.h  Tiles.h
src/Model/src/: Boss.cpp  Bullet.cpp  Constants.cpp  Enemy.cpp  Partita.cpp  Plane.cpp  Player.cpp  Projectile.cpp  QuadTree.cpp  Tiles.cpp
src/View/: AirplaneLights.hpp  BulletView.hpp  InfiniteGrid.hpp  ParticleSystem.hpp  PlaneView.hpp  Terrain.hpp  TerrainView.hpp  TileView.hpp
src/headers/glfw-3.3.8/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/headers/glfw-3.3.8/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
src/headers/glfw-3.3.8/src/: Makefile  cmake_install.cmake
src/headers/glfw-3.3.8/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
src/headers/glfw-3.4/: CMakeLists.txt
src/headers/soloud/doc/: soloud.html
src/headers/soloud/src/backend/sdl2_static/: soloud_sdl2_static.cpp
src/models/: B2.gltf  Biplane.mtl  player.mtl
src/shaders/: bulletFrag.frag  bulletFrag.spv  bulletVert.spv  bulletVert.vert  compileShaders.sh  frag.spv  fragment.frag  gridFrag.spv  gridShader.frag  gridShader.vert  gridVert.spv  particleShader.frag  particleShader.vert  particleShaderFrag.spv  particleShaderVert.spv  plane.frag  plane.vert  planeFrag.spv  planeLightsFrag.frag  planeLightsFrag.spv  planeLightsVert.spv  planeLightsVert.vert  planeVert.spv  shaderCompile.bat  terrainShader.frag  terrainShader.vert  terrainShaderFrag.spv  terrainShaderVert.spv  utility.glsl  vert.spv  vertex.vert  vertexshader.vert
